# fastipy

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.local  README.md  docker-compose.yml  pyproject.toml
.zed/: settings.json
api/: urls.py
api/serializers/: user.py
api/utils/: pagination.py
api/views/: __init__.py
authentication/: admin.py
authentication/constants/: __init__.py  errors.py
authentication/migrations/: 0001_initial.py
authentication/models/: user.py
authentication/services/: __init__.py  auth.py
core/middleware/: logging.py
placeholder/: asgi.py  logging.py  settings.py  settings_test.py  urls.py
src/api/: urls.py
src/api/serializers/: auth.py
src/api/utils/: exceptions.py
src/api/views/: __init__.py  auth.py  health_check.py  user.py
src/authentication/constants/: exceptions.py
src/core/constants/: __init__.py  exceptions.py
src/placeholder/: settings.py  wsgi.py
src/tests/api/auth/: test_login.py  test_logout.py
src/tests/core/middleware/: test_logging.py
tests/api/auth/: test_register.py
tests/api/users/: test_me.py
tests/api/views/: test_healthcheck.py
tests/authentication/services/: test_auth.py
utils/: cascade_update_fastipy.py
