[project]
name = "PLACEHOLDER"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "Django>=5.1.1",
    "python-dotenv>=1.0.1",
    "psycopg2>=2.9.9",
]
requires-python = "==3.12.*"
readme = "README.md"


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python manage.py runserver 0.0.0.0:8000"
test = "pytest"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.6.8",
    "isort>=5.13.2",
]
test = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "pytest-django>=4.9.0",
]

[tool.pytest.ini_options]
addopts = "-rfE --last-failed"
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
unfixable = ["I001"]

[tool.ruff.lint.per-file-ignores]
"*migrations/*" = ["F401"]


[tool.isort]
force_sort_within_sections = false
multi_line_output = 3
line_length = 120
include_trailing_comma = true
order_by_type = true
skip = "migrations"
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
