[project]
name = "PLACEHOLDER"
version = "0.1.0"
description = ""
authors = []
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"

[dependency-groups]
dev = ["isort>=6.0.1", "pytest>=8.4.1", "pytest-mock>=3.14.1", "ruff>=0.12.7"]

[tool.pytest.ini_options]
addopts = "-rfE --last-failed"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
unfixable = ["I001"]

[tool.ruff.lint.per-file-ignores]
"*migrations/*" = ["F401"]


[tool.isort]
force_sort_within_sections = false
multi_line_output = 3
line_length = 120
include_trailing_comma = true
order_by_type = true
skip = "migrations"
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
